@@ -8,9 +8,11 @@ RUN ./gradlew shadowJar
 # Full jdk required for font rendering on ship ect
 FROM toxicmushroom/openjdk:16-glibc
 WORKDIR /opt/melijn
+ENV VERSION_HASH=%VERSION_HASH%
 COPY --from=builder ./etc/melijn/build/libs/ .
 ENTRYPOINT java \
     -Xmx${RAM_LIMIT} \
     -Dkotlin.script.classpath="/opt/melijn/melijn.jar" \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
     -jar \
     ./melijn.jar
